# ml-zoomcamp-hw

./: .gitignore  Dockerfile  README.md  fapi.py  hw1.ipynb  hw2.ipynb  hw3.ipynb  hw4.ipynb  hw5.ipynb  hw6.ipynb  hw8.ipynb  hw9.ipynb  hw9_infer.py  pyproject.toml
